<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_home">Contacts</string>
    <string name="title_dashboard">Message List</string>
    <string name="title_notifications">Settings</string>
    <string name="title_activity_profile_screen">ProfileScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="string_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up"> <u>Sign Up</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="app">App</string>
    <string name="message_list">Message List</string>
    <string name="add_new_message">Add new message</string>
    <string name="title_activity_settings">Activity Settings</string>
    <string name="name">Name</string>
    <string name="contact_email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="signature_title">Title</string>
    <string name="messages_header">Messages Header</string>
    <string name="reply_title">Reply</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync</string>
    <string name="attachment_title">Attachment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="Profile">fragment_profile</string>
    <string name="already_have_an_account"><u>I Already Have an Account</u></string>
    <string name="edit_contact">Edit Contact</string>
    <string name="update">Update</string>
</resources>