<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_contacts">

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.finalproject.ui.contacts.ContactsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_navigation_contacts_to_navigation_messages"
            app:destination="@id/navigation_messages" />
        <action
            android:id="@+id/action_navigation_contacts_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.finalproject.ui.messagelist.MessageListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_messagelist" >
        <action
            android:id="@+id/action_navigation_messages_to_navigation_contacts"
            app:destination="@id/navigation_contacts" />
        <action
            android:id="@+id/action_navigation_messages_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.finalproject.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_contacts"
            app:destination="@id/navigation_contacts" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_messages"
            app:destination="@id/navigation_messages" />
    </fragment>

    <action
        android:id="@+id/action_global_nav_home"
        app:destination="@id/navigation_contacts" />
</navigation>